# termux-sms2tg

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  Taskfile.yml  pyproject.toml  requirements.txt
src/app/: main.py
src/termux_sms2tg/: __init__.py  bot.py  config.py  hash.py  main.py  termux_client.py
