[project]
name = "python-project-template"
version = "0.1.0"
description = "A Python project starter template with pre-configured tools"
authors = [{ name = "NKTKLN", email = "nktkln@nktkln.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
  "ruff>=0.15.1",
  "mypy>=1.19.1",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "coverage>=7.13.4",
  "pip-audit>=2.10.0",
  "deptry>=0.24.0",
  "commitizen>=4.13.7",
]

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.hatch.build.targets.sdist]
include = ["src/app", "README.md", "pyproject.toml"]

[tool.hatch.build]
exclude = [
  "/.github",
  "/.venv",
  "/tmp",
  "/dist",
  "/build",
  "**/__pycache__",
  "**/*.pyc",
]

[tool.ruff]
line-length = 88
target-version = "py313"
extend-include = ["*.ipynb"]
exclude = [".git", "__pycache__", "build", "dist", ".venv", "tmp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "D", "B", "B9", "C90", "S", "UP", "SIM", "TRY", "PL", "RUF", "ARG", "PTH"]
ignore = ["E203", "D100"]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S101", "D", "PLR2004"]  # assert, docstrings, magic values in tests
"**/*.ipynb" = ["T201"]                   # print

[tool.mypy]
mypy_path = ["src"]
files = ["src", "tests"]
python_version = "3.13"
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
pretty = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
strict_optional = true
disallow_untyped_calls = true
exclude = [".git", "__pycache__", "build", "dist", ".venv", "tmp"]

[tool.coverage.run]
branch = true
source = ["app"]
parallel = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
